Added login and registration fields

--- a/mysite.frontend/src/app/Components/account/account.component.html
+++ b/mysite.frontend/src/app/Components/account/account.component.html
@@ -1,5 +1,5 @@
-<div class="account-background">
-  <div class="button">
+<div class="account-background" [ngClass]="{'highlighted': isAuthMode}">
+  <div class="button" (click)="AccountClick()">
     Account
   </div>
 </div>
