--- a/mysite.frontend/src/app/Components/nav/nav.component.html
+++ b/mysite.frontend/src/app/Components/nav/nav.component.html
@@ -1,2 +1,49 @@
 <div class="nav-background">
+  <!--Авториция-->
+  <div *ngIf="isAuthMode" class="center">
+    <input type="checkbox" id="mode" [(ngModel)]="isSingUp">
+    <label for="mode">
+      <div class="mode">
+        <span [ngClass]="{'selected': !isSingUp}">Sign in</span>
+        <span [ngClass]="{'selected': isSingUp}">Sign up</span>
+      </div>
+    </label>
+
+    <!--Вход-->
+    <div *ngIf="!isSingUp" class="center">
+      <form #f="ngForm" (ngSubmit)="onSingIn(f)" class="center">
+        <div class="field">
+          <label class="label-field" for="emailIn">Email</label>
+          <input type="email" id="emailIn" name="email" ngModel required>
+        </div>
+        <div class="field">
+          <label class="label-field" for="passwordIn">Password</label>
+          <input type="password" id="passwordIn" name="password" ngModel required>
+        </div>
+        <button type="submit">Sign in</button>
+      </form>
+    </div>
+
+    <!--Регистрация-->
+    <div *ngIf="isSingUp" class="center">
+      <form #f="ngForm" (ngSubmit)="onSingIn(f)" class="center">
+        <div class="field">
+          <label class="label-field" for="nick">Name</label>
+          <input type="email" id="nick" name="text" ngModel required>
+        </div>
+        <div class="field">
+          <label class="label-field" for="emailUp">Email</label>
+          <input type="email" id="emailUp" name="email" ngModel required>
+        </div>
+        <div class="field">
+          <label class="label-field" for="passwordUp">Password</label>
+          <input type="password" id="passwordUp" name="password" ngModel required>
+        </div>
+        <button type="submit">Sign up</button>
+      </form>
+    </div>
+  </div>
+
+  <!--Навигация-->
+  <div *ngIf="!isAuthMode" class="center">Тут будет навигация</div>
 </div>
