--- a/mysite.frontend/src/app/Components/account/account.component.css
+++ b/mysite.frontend/src/app/Components/account/account.component.css
@@ -4,6 +4,11 @@
   border-radius: 2.5vw;
   background-color: var(--background-color);
 }
+
+.highlighted {
+  border: .27vw solid var(--Accent);
+}
+
 .account-background .button {
   width: 100%;
   height: 100%;
@@ -13,6 +18,7 @@
   align-items: center;
   font: var(--H3);
   color: var(--Primary);
+  cursor: pointer;
 }
 .account-background .button:hover {
   background-color: var(--Button-primary-hover);
