--- a/mysite.frontend/src/app/Components/nav/nav.component.css
+++ b/mysite.frontend/src/app/Components/nav/nav.component.css
@@ -1,6 +1,85 @@
 .nav-background {
   width: 100%;
-  height: 60%;
+  min-height: 20%;
+  padding: 1.4vw;
   border-radius: 2.5vw;
   background-color: var(--background-color);
+  backdrop-filter: var(--background-blur);
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+input[type="checkbox"]{
+  display: none;
+}
+
+span {
+  font: var(--body2);
+  text-decoration: none;
+  padding: .35vw .6vw;
+  border-radius: 2.5vw;
+  background-color: var(--glass);
+}
+
+.selected{
+  background-color: var(--Accent);
+}
+
+.mode {
+  display: flex;
+  align-items: center;
+  border-radius: 2.5vw;
+  background-color: var(--glass);
+  border: .27vw var(--border) solid;
+  padding: .35vw .6vw;
+  gap: .7vw;
+}
+
+.field {
+  margin: .4vw 0;
+}
+
+input[type="email"], input[type="password"], input[type="text"]{
+  width: 100%;
+  color: var(--Primary);
+  font: var(--body2);
+  border-radius: 2.5vw;
+  background-color: transparent;
+  border: .27vw var(--border) solid;
+  padding: .45vw .6vw;
+  backdrop-filter: var(--button-blur);
+}
+
+input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focus {
+  outline: none;
+  border: .27vw var(--Accent) solid;
+}
+
+.label-field {
+  letter-spacing: 0;
+  margin-left: .9vw;
+  font: var(--footnote);
+  color: var(--Gray);
+}
+
+button {
+  margin: .5vw;
+  background-color: transparent;
+  border: none;
+  color: var(--Accent);
+  padding: .7vw 2.65vw;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font: var(--sumbit);
+  border-radius: 5vw;
+  backdrop-filter: var(--button-blur);
+}
+
+button:hover {
+  background-color: var(--Button-primary-hover);
 }
