--- a/mysite.frontend/src/styles.css
+++ b/mysite.frontend/src/styles.css
@@ -5,6 +5,8 @@
   --Primary: #FFF7EB;
   --Accent: #EC7F42;
   --Gray: #989898;
+  --border: #333333;
+  --glass: rgba(51, 51, 51, 0.07);
 
   /* Fonts */
   --H1: 2.8vw/1.5vw 'M_PLUS_1';
@@ -16,8 +18,13 @@
   --body1Decotation: 1.4vw/1.5vw 'M_PLUS_1';
   --body1Semibold: 1.4vw/1.5vw 'M_PLUS_1_SemiBold';
   --body2: 1vw/1.5vw 'M_PLUS_1_Regular';
-  --footnote: 0.7vw/1.5vw 'M_PLUS_1';
+  --footnote: 0.85vw/1.5vw 'M_PLUS_1';
   --navMenu: 1.4vw/1.5vw 'Metrophobic';
+  --sumbit: 1.25vw/1.5vw 'M_PLUS_1_Regular';
+
+  /* Other */
+  --button-blur: blur(2.85vw);
+  --background-blur: blur(.4vw);
 }
 
 @font-face {
@@ -40,8 +47,12 @@
   src: url('assets/Fonts/Metrophobic/Metrophobic-Regular.ttf');
 }
 
+::selection {
+  background: var(--Accent);
+}
+
 html {
-  letter-spacing: -0.3px;
+  letter-spacing: -0.1px;
 }
 
 h1 {
