--- a/mysite.frontend/src/app/Components/nav/nav.component.html
+++ b/mysite.frontend/src/app/Components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div class="nav-background">
   <!--Авториция-->
-  <div *ngIf="isAuthMode" class="center">
+  <div *ngIf="isAuthMode" class="center background">
     <input type="checkbox" id="mode" [(ngModel)]="isSingUp">
     <label for="mode">
       <div class="mode">
